[gd_scene load_steps=14 format=2]

[ext_resource path="res://rsc/settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://assets/settings/title.png" type="Texture" id=2]
[ext_resource path="res://rsc/return/Return.tscn" type="PackedScene" id=3]
[ext_resource path="res://rsc/bg/Bg.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/settings/sound_on_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/settings/sound_on_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/settings/sound.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/settings/save_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/settings/save_normal.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/GemunuLibre-Light.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/settings/deleted.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("SoundContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 135, 1000 ), Vector2( 135, 190 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -511, 40 ), Vector2( 25, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/Reset:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 488, 208 ), Vector2( 0, 0 ) ]
}

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Sound"

[node name="Bg" parent="." instance=ExtResource( 4 )]
color = Color( 0.411765, 0.176471, 0.262745, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_top = 40.0
margin_right = 225.0
margin_bottom = 190.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="VBoxContainer"]
margin_right = 450.0
margin_bottom = 150.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -210.0
margin_right = 115.0
margin_bottom = 50.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="TextureButton" parent="SoundContainer"]
margin_right = 230.0
margin_bottom = 260.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -115.0
margin_top = -380.0
margin_right = 115.0
margin_bottom = -120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="TextureButton" parent="HBoxContainer"]
margin_right = 230.0
margin_bottom = 260.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowCheckBox" type="CheckBox" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -88.0
margin_right = 376.0
custom_fonts/font = SubResource( 1 )
text = "LOW RESOURCES MODE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -77.0
margin_right = 143.0
margin_bottom = 77.0
popup_exclusive = true
window_title = "Reset user data"
dialog_text = "By pressing \"OK\" you will restart user data, this cannot be restored"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "initial"
anims/initial = SubResource( 2 )

[node name="Return" parent="." instance=ExtResource( 3 )]
scene_path = "res://rsc/lobby/Lobby.tscn"

[node name="Deleted" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Sound"
[connection signal="pressed" from="SoundContainer/Sound" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="LowCheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="confirmed" from="ResetDialog" to="." method="_on_ResetDialog_confirmed"]
[connection signal="popup_hide" from="ResetDialog" to="." method="_on_ResetDialog_popup_hide"]
